--- a/EtchCSS.css
+++ b/EtchCSS.css
@@ -6,8 +6,72 @@
 
     display: flex;
     padding: 20px;
+    border-width: 2px ;
 
 }
+
+
+
+.button{
+
+
+    height: 5vh;
+    width: 100%;
+    margin-bottom: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-color: black;
+    border-radius: 4px;
+    font-family: 'Arial';
+    font-size: 1em;
+
+
+}
+
+
+.button.red{
+
+    flex-basis: 50%;
+
+}
+.button.blue{
+
+    flex-basis: 50%;
+
+
+
+}
+.button.green{
+
+    flex-basis: 50%;
+
+
+
+}
+.button.yellow{
+
+    flex-basis: 50%;
+
+
+
+}
+.button.random{
+
+    flex-basis: 50%;
+
+
+
+}
+.button:hover{
+    
+
+    background-color: lightgray;
+
+
+}
+
 
 
 .highlighted{
@@ -22,9 +86,42 @@
 }
 
 
-.box{
+.mainDiv{
+    margin-top: 24px;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.sideBar{
+
+    display: flex;
+    flex-direction: column;
+    width: 160px;
+    height: 500px;
+    margin-right: 25px;
+
     /* border-style: solid;
-    border-color:red ; */
+    border-color: red; */
+    padding-left: 24px;
+    padding-right: 24px;
+
+}
+
+.colorContainer{
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+
+
+}
+
+
+
+.box{
+    
     padding: 0px;
     display: flex;
     flex-direction: row;
@@ -37,6 +134,6 @@ body{
 
     display: flex;
     flex-direction: column;
-
+    align-items: center;
 
 }
